# Arna

./: DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  swedish_style_ai_agent_ui.ipynb  todo.md
docs/architecture/: system_architecture.md
src/: agents.py  application.py  autogen_tool.py  chat_ui.py  discussion.py  download_view.py  entry.py  main.py  team_settings.py
src/core/: agent_core.py  code_structure_manager.py
src/services/: api_connector.py  data_storage.py  llm_service.py
src/templates/: module_template.py.j2
src/tools/: __init__.py  code_structure.py  math_tools.py  question_tool.py  tool_integration.py  web_tools.py
src/ui/: code_editor.py  kivy_application.py  main_app.py  output_console.py  project_view.py  theme.py
tests/: test_agent_core.py  test_code_structure.py  test_llm_service.py  test_ui.py
