[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manus_agent"
version = "0.1.0"
description = "metagptベースのDevinのような複雑なソフトウェア開発能力を持つ汎用Agent"
authors = [
    {name = "Manus Team"}
]
readme = "README.md"
requires-python = ">=3.13.2"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "kivy>=2.0.0",
    "kivymd>=1.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "requests>=2.25.0",
    "pygments>=2.10.0",
    "pytest>=6.0.0",
]

[project.scripts]
manus_agent = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
